--- a/showeq/trunk/configure.in
+++ b/showeq/trunk/configure.in
@@ -2,12 +2,12 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/main.cpp)
 AC_CANONICAL_SYSTEM
 AM_CONFIG_HEADER(conf.h)
-AM_INIT_AUTOMAKE(showeq, 4.3.6)
+AM_INIT_AUTOMAKE(showeq, 4.3.7)
 AM_MAINTAINER_MODE
 
 dnl Please remember to update this when the official libEQ.a gets updated...
 dnl (* this is list in case we have libEQ.a's for multiple platforms*)
-CURRENT_LIBEQMD5="ddaac48baaa3e9b015984a366748ed72"
+CURRENT_LIBEQMD5="f45cb14c6e0a4c55c3b60bc0959945d6"
 
 dnl Use CCd/CXXd rather than CC/CXX otherwise it cache's the value
 dnl and prevents the alternate search from working. Would be better
@@ -236,7 +236,7 @@ done
 if [[ "$ac_showeq_found_md5" != "YES" ]]; then
 	AC_MSG_WARN([$1 has md5sum $LIBEQMD5 which doesn't match reference md5sum])
 fi
-AC_MSG_CHECKING([for InitializeLibEQ in $1 ])
+AC_MSG_CHECKING([for initDecode in $1 ])
 ac_save_libs="$LIBS"
 ac_save_cxxflags="$CXXFLAGS"
 CXXFLAGS="$CXXFLAGS -I${srcdir}/src"
@@ -246,10 +246,11 @@ AC_TRY_LINK(
 #include <stdio.h>
 #undef HAVE_LIBEQ
 #define HAVE_LIBEQ 1
-#include "libeq.h"
+#include "decode.h"
+unsigned short implicitlen(unsigned short) { return 0; }
 ],
 [
-InitializeLibEQ(0, 0, 0, 0);
+initDecode();
 ],
 [ 
 $2=$1
