--- a/showeq/branches/pre_5_0_dev/configure.in
+++ b/showeq/branches/pre_5_0_dev/configure.in
@@ -1,8 +1,9 @@
 dnl Process this file with autoconf to produce a configure script.
+dnl $Header$ $Name$
 AC_INIT(src/main.cpp)
 AC_CANONICAL_SYSTEM
 AM_CONFIG_HEADER(conf.h)
-AM_INIT_AUTOMAKE(showeq, 4.3.17.1)
+AM_INIT_AUTOMAKE(showeq, 4.9.99.1)
 AM_MAINTAINER_MODE
 
 dnl Use CCd/CXXd rather than CC/CXX otherwise it cache's the value
