--- a/showeq/branches/pre_5_0_dev/maps/Makefile.am
+++ b/showeq/branches/pre_5_0_dev/maps/Makefile.am
@@ -1,7 +1,6 @@
+mapdatadir=$(pkgdatadir)/maps
+mapdata_DATA=$(wildcard *.map)
 
-pkgdatadir=$(prefix)/maps
-pkgdata_DATA=$(wildcard *.map)
-
-EXTRA_DIST=$(pkgdata_DATA) 
+EXTRA_DIST=$(mapdata_DATA) 
 
 MAINTAINERCLEANFILES= Makefile.in
