--- a/showeq/branches/pre_5_0_beta/configure.in
+++ b/showeq/branches/pre_5_0_beta/configure.in
@@ -1,10 +1,11 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl $Id$ $Name$
 
+AC_PREREQ(2.54)
 AC_INIT(src/main.cpp)
 AC_CANONICAL_SYSTEM
 AM_CONFIG_HEADER(conf.h)
-AM_INIT_AUTOMAKE(showeq, 5.0.0.13)
+AM_INIT_AUTOMAKE(showeq, 5.0.0.14)
 AM_MAINTAINER_MODE
 
 dnl Use CCd/CXXd rather than CC/CXX otherwise it cache's the value
