--- a/showeq/branches/pre_v5_0_dev2/configure.in
+++ b/showeq/branches/pre_v5_0_dev2/configure.in
@@ -2,9 +2,13 @@ dnl Process this file with autoconf to produce a configure script.
 dnl $Id$ $Name$
 
 AC_PREREQ(2.53)
-AC_INIT(src/main.cpp)
+AC_INIT(showeq, 5.0.0.15)
+AC_CONFIG_SRCDIR(src/main.cpp)
 AC_CANONICAL_SYSTEM
+
 AM_CONFIG_HEADER(config.h)
+AM_INIT_AUTOMAKE(1.7)
+AM_MAINTAINER_MODE
 
 dnl doxygen macros
 DX_HTML_FEATURE(ON)
@@ -16,9 +20,6 @@ DX_XML_FEATURE(OFF)
 DX_PDF_FEATURE(OFF)
 DX_PS_FEATURE(OFF)
 DX_INIT_DOXYGEN(ShowEQ, doxygen.cfg, dox)
-
-AM_INIT_AUTOMAKE(showeq, 5.0.0.15)
-AM_MAINTAINER_MODE
 
 dnl Use CCd/CXXd rather than CC/CXX otherwise it cache's the value
 dnl and prevents the alternate search from working. Would be better
