--- a/showeq/branches/pre_v5_0_dev2/doxygen.cfg
+++ b/showeq/branches/pre_v5_0_dev2/doxygen.cfg
@@ -85,7 +85,7 @@ FILE_PATTERNS          = *.c \
                          *.h \
                          *.inc
 RECURSIVE              = YES
-EXCLUDE                = 
+EXCLUDE                = m_*.cpp 
 EXCLUDE_SYMLINKS       = NO
 EXCLUDE_PATTERNS       = 
 EXAMPLE_PATH           = $(SRCDIR)
